Jump Start Changelog
====================

1.2.1
-----

--------------------------------------------------------------

1.2.0
-----

*Warning: Make sure to read this article before updating: [Updating to Jump Start 1.2](http://support.themeblvd.com/updating-to-jump-start-1-2/)*

* **Updated Theme Blvd framework to 2.4.0**
* Updated to Bootstrap 3.
* Updated to FontAwesome 4.
* Admin styling adjustments for WordPress 3.8.
* Fixed bug with "order" custom field not working for Post List/Grid page templates.
* Minor improvements to Jump Start update handling.

--------------------------------------------------------------

1.1.3
-----

* Fixed image logo display in IE when no image width is set.
* Fixed Gallery Override feature of mini post grid being limited to 5 images.
* Added filter to `themeblvd_show_comments`.
* Added filter `themeblvd_get_option` for every time an option is pulled.
* Admin jQuery improvements for 1.9 - Converted all .live() to .on()
* Fixed `ThemeBlvd_Select_Menu_Walker::start_el()` PHP 5.4 strict error.
* Fixed CSS overflow quirk with Nivo slider type.
* Fixed IE8 Carrousel slider display bug.
* Fixed double website title bug in Feeds.

--------------------------------------------------------------

1.1.2
-----

* Fixed bug with saving "Custom Text" logo option.
* Fixed issues with main menu dropdowns not displaying over some items.
* Fixed handling of private and password-protected pages with custom layouts.
* Fixed compatibility with [Theme Blvd Layouts to Posts](http://wordpress.org/plugins/theme-blvd-layouts-to-posts/) plugin.
* Updated breadcrumbs HTML markup to match Twitter Bootstrap 2.3 changes.

--------------------------------------------------------------

1.1.1
-----

* Fixed admin bugs in Firefox and IE, media uploader, radio buttons, and color pickers.
* Fixed bug with archive content/excerpt option not being respected on search results.
* Fixed bug with `themeblvd_edit_option()` in Options API.