@@ -125,14 +125,18 @@ input[type="checkbox"]:focus {
 output {
     color: #ffffff;
 }
-.form-control {
+.form-control,
+input[type="text"],
+textarea {
     color: #ffffff;
     background-color: #333333;
     border-color: #000000;
     -webkit-box-shadow: inset 0 0 0 #000000;
     box-shadow: inset 0 0 0 #000000;
 }
-.form-control:focus {
+.form-control:focus,
+input[type="text"]:focus,
+textarea:focus {
     border-color: #000000;
     -webkit-box-shadow: 0 0 8px #000000;
     box-shadow: 0 0 8px #000000;
@@ -221,36 +225,36 @@ fieldset[disabled] .form-control {
 }
 @media (min-width: 768px) {
     .nav-tabs.nav-justified > li > a {
-    border-bottom: 1px solid #000000;
-  }
-  .nav-tabs.nav-justified > .active > a,
-  .nav-tabs.nav-justified > .active > a:hover,
-  .nav-tabs.nav-justified > .active > a:focus {
-    border-bottom-color: #000000;
-  }
+        border-bottom: 1px solid #000000;
+    }
+    .nav-tabs.nav-justified > .active > a,
+    .nav-tabs.nav-justified > .active > a:hover,
+    .nav-tabs.nav-justified > .active > a:focus {
+        border-bottom-color: #000000;
+    }
 }
 .nav-pills > li.active > a,
 .nav-pills > li.active > a:hover,
 .nav-pills > li.active > a:focus {
-  color: #ffffff;
-  background-color: #151515;
+    color: #ffffff;
+    background-color: #151515;
 }
 .nav-tabs-justified > .active > a,
 .nav-tabs-justified > .active > a:hover,
 .nav-tabs-justified > .active > a:focus {
-  border: 1px solid #000000;
+    border: 1px solid #000000;
 }
 .breadcrumb > li + li:before {
-  color: #cccccc;
+    color: #cccccc;
 }
 .breadcrumb > .active {
-  color: #cccccc;
+    color: #cccccc;
 }
 .thumbnail,
 .pretty,
 .wp-caption {
-  background-color: transparent;
-  border-color: #1e1e1e;
+    background-color: transparent;
+    border-color: #1e1e1e;
 }
 a.thumbnail:hover,
 a.thumbnail:focus,
@@ -258,85 +262,85 @@ a.thumbnail.active,
 a.pretty:hover,
 a.pretty:focus,
 a.pretty.active {
-  border-color: #000000;
+    border-color: #000000;
 }
 .thumbnail .caption {
-  color: #cccccc;
+    color: #cccccc;
 }
 .list-group-item {
-  background-color: transparent;
-  border: 1px solid #000000;
+    background-color: transparent;
+    border: 1px solid #000000;
 }
 a.list-group-item {
-  color: #cccccc;
+    color: #cccccc;
 }
 a.list-group-item .list-group-item-heading {
-  color: #ffffff;
+    color: #ffffff;
 }
 a.list-group-item:hover,
 a.list-group-item:focus {
-  background-color: #292929;
+    background-color: #292929;
 }
 a.list-group-item.active,
 a.list-group-item.active:hover,
 a.list-group-item.active:focus {
-  color: #ffffff;
-  background-color: #151515;
-  border-color: #000000;
+    color: #ffffff;
+    background-color: #151515;
+    border-color: #000000;
 }
 .panel {
-  background-color: #transparent;
-  -webkit-box-shadow: 0 1px 1px #000000;
-  box-shadow: 0 1px 1px #000000;
+    background-color: transparent;
+    -webkit-box-shadow: 0 1px 1px #000000;
+    box-shadow: 0 1px 1px #000000;
 }
 .panel > .panel-body + .table,
 .panel > .panel-body + .table-responsive {
-  border-top: 1px solid #000000;
+    border-top: 1px solid #000000;
 }
 .panel-footer {
-  background-color: #151515;
-  border-top: 1px solid #000000;
+    background-color: #151515;
+    border-top: 1px solid #000000;
 }
 .panel-group .panel-heading + .panel-collapse .panel-body {
-  border-top: 1px solid #000000;
+    border-top: 1px solid #000000;
 }
 .panel-group .panel-footer + .panel-collapse .panel-body {
-  border-bottom: 1px solid #000000;
+    border-bottom: 1px solid #000000;
 }
 .panel-default {
-  border-color: #000000;
+    border-color: #000000;
 }
 .panel-default > .panel-heading {
-  color: #ffffff;
-  background-color: #292929;
-  border-color: #000000;
+    color: #ffffff;
+    background-color: #292929;
+    border-color: #000000;
 }
 .panel-default > .panel-heading + .panel-collapse .panel-body {
-  border-top-color: #000000;
+    border-top-color: #000000;
 }
 .panel-default > .panel-heading > .dropdown .caret {
-  border-color: #000000 transparent;
+    border-color: #000000 transparent;
 }
 .panel-default > .panel-footer + .panel-collapse .panel-body {
-  border-bottom-color: #000000;
+    border-bottom-color: #000000;
 }
 .close {
-  color: #cccccc;
-  text-shadow: 0 1px 0 #000000;
+    color: #cccccc;
+    text-shadow: 0 1px 0 #000000;
 }
 .close:hover,
 .close:focus {
-  color: #ffffff;
+    color: #ffffff;
 }
 .modal-content {
-  background-color: #2c2c2c;
-  border: 1px solid #000000;
+    background-color: #2c2c2c;
+    border: 1px solid #000000;
 }
 .modal-header {
-  border-bottom: 1px solid #000000;
+    border-bottom: 1px solid #000000;
 }
 .modal-footer {
-  border-top: 1px solid #000000;
+    border-top: 1px solid #000000;
 }
 
 /* =Secondary Navigation
